--- a/CV-APP/react/package.json
+++ b/CV-APP/react/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "react",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "vite": "^2.5.1"
-  }
+    "homepage": "https://delia-maria.github.io/deliadanut.github.io/",
+    "name": "react",
+    "version": "0.0.0",
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d buid",
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview"
+    },
+    "dependencies": {
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react-refresh": "^1.3.1",
+        "gh-pages": "^3.2.3",
+        "vite": "^2.5.1"
+    }
 }
