--- a/CV-APP/react/package.json
+++ b/CV-APP/react/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://delia-maria.github.io/deliadanut.github.io/",
+    "homepage": "https://Delia-Maria.github.io/Delia-Maria",
     "name": "react",
     "version": "0.0.0",
     "scripts": {
